# base_web_Tasks

./: .gitignore  manage.py  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
django_crud_api/: settings.py
front-web/: index.html  package-lock.json  package.json  vite.config.js
front-web/src/: App.jsx
front-web/src/api/: tasks.api.js
front-web/src/components/: Navigation.jsx  TaskCard.jsx  TaskList.jsx
front-web/src/pages/: TaskFormPage.jsx  TaskPage.jsx
tasks/: models.py  urls.py
tasks/migrations/: 0001_initial.py
